[gd_scene load_steps=28 format=2]

[ext_resource path="res://shooter/entity/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/bossbot-animsheet.png" type="Texture" id=2]
[ext_resource path="res://shooter/entity/SpiderBoss.gd" type="Script" id=3]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/muzzleflash.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=16]
outline_size = 1
outline_color = Color( 0.247059, 0.627451, 0.643137, 1 )
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "basic_shot",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "big_shot",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "spawn_drone",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
resource_local_to_scene = true
radius = 67.0

[sub_resource type="CircleShape2D" id=13]
resource_local_to_scene = true
radius = 14.3178

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=23]
resource_local_to_scene = true
radius = 150.0

[node name="SpiderBoss" groups=["SpiderBoss"] instance=ExtResource( 1 )]
z_index = 2
script = ExtResource( 3 )
max_health = 50
speed = 50
projectile_speed = 200
projectile_range = 350
projectile_explode_type = 2
projectile_attack_speed = 2.0
use_wind_up = true
enemy_name = "other"
drone_waves = 5
burst_freeze = 1
grenade_freeze = 1
big_shot_freeze = 3
spawn_drone_freeze = 1
rotation_speed = 180.0
player_interaction_font = SubResource( 16 )

[node name="AnimatedSprite" parent="." index="0"]
scale = Vector2( 4, 4 )
frames = SubResource( 7 )
animation = "basic_shot"

[node name="RealHitBox" type="Area2D" parent="." index="1"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="RealHitBox" index="0"]
shape = SubResource( 14 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 13 )

[node name="NavigationAgent2D" parent="." index="8"]
avoidance_enabled = false

[node name="AcidOverlay" parent="." index="9"]
frame = 2

[node name="CollisionShape2D" parent="SightRangeDebug" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="AttackRangeDebug" index="0"]
shape = SubResource( 2 )

[node name="BigShotTimer" type="Timer" parent="." index="12"]
wait_time = 15.0
one_shot = true

[node name="SpawnDroneTimer" type="Timer" parent="." index="13"]
wait_time = 25.0
one_shot = true

[node name="BurstTimer" type="Timer" parent="." index="14"]
wait_time = 0.1
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="." index="15"]
enabled = true
cast_to = Vector2( 0, -5000 )

[node name="EndOfDroneAttackTimer" type="Timer" parent="." index="16"]
one_shot = true

[node name="BulletSpawn" parent="." index="17"]
position = Vector2( 0, -56 )

[node name="MuzzleFlash" parent="." index="18"]
position = Vector2( 2, -88 )
scale = Vector2( 1e-05, 1e-05 )
frames = SubResource( 15 )

[node name="BulletImpact" parent="." index="19"]
lifetime = 0.4
scale_amount = 3.0

[node name="RandomBulletImpact" parent="." index="20"]
lifetime = 0.4
scale_amount = 2.0

[node name="PlayerInteraction" type="Area2D" parent="." index="21" groups=["SpiderBoss"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteraction" index="0"]
shape = SubResource( 23 )
disabled = true

[node name="DroneWaveTimer" type="Timer" parent="." index="22"]
one_shot = true

[connection signal="area_entered" from="RealHitBox" to="." method="_on_RealHitBox_area_entered"]
[connection signal="timeout" from="BigShotTimer" to="." method="_on_BigShotTimer_timeout"]
[connection signal="timeout" from="SpawnDroneTimer" to="." method="_on_SpawnDroneTimer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
[connection signal="timeout" from="EndOfDroneAttackTimer" to="." method="_on_EndOfDroneAttackTimer_timeout"]
[connection signal="body_entered" from="PlayerInteraction" to="." method="_on_PlayerInteraction_body_entered"]
[connection signal="body_exited" from="PlayerInteraction" to="." method="_on_PlayerInteraction_body_exited"]
[connection signal="timeout" from="DroneWaveTimer" to="." method="_on_DroneWaveTimer_timeout"]
